# Grupo1-EDA-TrabajoFinal

./: CMakeLists.txt  README.md  boundingbox.h  main.cxx  mainProgram.cpp  profile.h  rstartree.h  visualizer.h
Files/: 1000.csv  10000.csv  20000.csv  dataColumn.csv  importantColumns.csv
